# MultivariateHamrickTaqqu

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
Data/: Reader.py
framework/: README.md
notebooks/: example.ipynb
src/mht/: __init__.py
src/mht/io/: reader.py
src/mht/models/: __init__.py  processes.py
src/mht/testing/: __init__.py  hypothesis.py  kernel_test.py  leybourne_mccabe.py
src/mht/utils/: __init__.py  decorators.py
src/mht/viz/: __init__.py  plots.py
tests/: conftest.py  test_kernel_test.py  test_processes.py
