[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mht"
version = "1.0.5"
description = "Kernel-based stationarity test for multivariate diffusion processes (Hamrick-Taqqu)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "deprecated>=1.2",
    "matplotlib>=3.7",
    "nest_asyncio>=1.5",
    "numpy>=1.24",
    "pandas>=1.5",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "statsmodels>=0.13",
    "tqdm>=4.65",
    "wrapt>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "jupyter",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
